# p

./: .gitignore  Cargo.toml  README.md  cliff.toml  dev.sh  install.sh  project  release.sh  renovate.json  shell.nix
.github/workflows/: check.yml  release.yml  test.yml
assets/demo/: demo.tape
example/external_versions_repository/: readme.md
example/versions/: nextjs.toml
examples/demo/: demo.tape
examples/external_version_repository/: readme.md
examples/external_version_repository/versions/: git.toml
examples/versions/: nodejs.toml
src/: config.rs  main.rs  projects.rs  repositories.rs  shell.rs  update.rs  versions.rs
src/sample-versions/: nodejs.toml  rust.toml
tests/: cli.rs  cli.sh
