[package]
name = "p"
version = "1.2.1"
edition = "2021"

[dependencies]
assert_cmd = "2.0.12"
clap = { version = "4.4.11", features = ["derive"] }
clap_complete = "4.4.4"
colored = "2.0.4"
dirs = "5.0.1"
openssl = { version = "0.10.61", optional = true }
predicates = "3.0.4"
regex = "1.9.6"
reqwest = "0.11.22"
self_update = { version = "0.37.0", features = ["archive-tar", "compression-flate2"] }
serde = { version = "1.0.193", features = ["derive"] }
shellexpand = "3.1.0"
simsearch = "0.2.4"
tempfile = "3.8.1"
toml = "0.7.8"

[profile.release]
strip = true
opt-level = "z"
lto = true

[features]
vendored-openssl = ["openssl/vendored"]
